[tool.poetry]
name = "sandbox"
version = "0.1.0"
description = ""
authors = ["John Romanski <382382+JohnRomanski@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.6"
django-environ = "0.4.5"
django-oscar = {extras = ["sorl-thumbnail"], version = "^3.0"}
easy-thumbnails = "^2.7.1"
django-extensions = "^3.1.0"
django-debug-toolbar = "^3.2"
Whoosh = "^2.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
